--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 mysql-connector-python==9.1.0
 python-dotenv==1.0.1
 tabulate==0.9.0
+
+# Testing dependencies
+pytest==7.4.4
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+coverage==7.4.0
