--- a/.github/workflows/publish_ebookstore_docker_image.yml
+++ b/.github/workflows/publish_ebookstore_docker_image.yml
@@ -5,7 +5,7 @@ on:
     types: [published]
   workflow_dispatch:
   push:
-    branches: [test]
+    branches: [main]
   pull_request:
     branches: [main]
 
